<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/transparent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_poup"
        android:orientation="vertical"
        tools:ignore="UselessParent" >
        
        <Button
            android:id="@+id/btn_camer"
            style="@style/dialog_avatar_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15.0dp"
            android:background="@drawable/btn_white"
            android:text="@string/_personal_avatar_camer" />

        <Button
            android:id="@+id/btn_local"
            style="@style/dialog_avatar_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5.0dp"
            android:background="@drawable/btn_white"
            android:text="@string/_personal_avatar_local" />

        <Button
            android:id="@+id/btn_cancel"
            style="@style/dialog_avatar_white_txt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5.0dp"
            android:background="@drawable/btn_cancel"
            android:text="@string/_personal_avatar_cancel" />
    </LinearLayout>

</RelativeLayout>